--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^9.1.7",
     "jsdom": "^27.0.1",
     "lint-staged": "^16.2.6",
+    "pokeapi-types": "0.0.2",
     "prettier": "3.6.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
