--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
+  "license": "MIT",
   "dependencies": {
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
